# gdpr-databricks-compliance

./: .gitignore  QUICK_START.md  README.md  databricks_jobs.yaml  deploy.py  env.example  pyproject.toml  requirements.txt  setup.py  setup_with_uv.ps1  setup_with_uv.sh
examples/: __init__.py  basic_usage.py
jobs/: __init__.py  compliance_report_job.py  daily_gdpr_checks.py  data_processing_job.py  pii_detection_job.py
src/: __init__.py  audit.py  config.py  data_quality.py  governance.py  k_anonymity.py  lineage.py  pii_detection.py  pseudonymization.py  retention.py
utils/: __init__.py  init_databricks.py
